--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-property-decorator": "^7.2.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
