--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^7.2.0",
     "vue-router": "^3.0.1",
+    "vuelidate": "^0.7.4",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.1"
