--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "vuex-class": "^0.3.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-e2e-nightwatch": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.1",
@@ -40,6 +42,7 @@
     "chai": "^4.1.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "material-design-icons-iconfont": "^4.0.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue-cli-plugin-vuetify": "^0.4.5",
