--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "axios": "^0.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-stage-1": "^6.24.1",
+    "fullcalendar": "^3.9.0",
+    "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
+    "moment": "^2.23.0",
     "register-service-worker": "^1.0.0",
     "roboto-fontface": "*",
     "vue": "^2.5.17",
