--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "moment": "^2.23.0",
+    "normalizr": "^3.3.0",
     "register-service-worker": "^1.0.0",
     "roboto-fontface": "*",
     "vue": "^2.5.17",
