--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
-    "@fortawesome/fontawesome-free": "^5.2.0",
     "axios": "^0.18.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-preset-stage-1": "^6.24.1",
     "fullcalendar": "^3.9.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
@@ -23,17 +20,12 @@
     "register-service-worker": "^1.0.0",
     "roboto-fontface": "*",
     "vue": "^2.5.17",
-    "vue-class-component": "^6.3.2",
-    "vue-property-decorator": "^7.2.0",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4",
     "vuetify": "^1.3.0",
-    "vuex": "^3.0.1",
-    "vuex-class": "^0.3.1"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-decorators": "^7.1.2",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-e2e-nightwatch": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.1",
