--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
     "axios": "^0.18.0",
+    "faker": "^4.1.0",
     "fullcalendar": "^3.9.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
