--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "material-design-icons-iconfont": "^4.0.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "sinon": "^7.2.3",
     "vue-cli-plugin-vuetify": "^0.4.5",
     "vue-template-compiler": "^2.5.17"
   }
