--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-rc.1",
     "axios": "^0.18.0",
-    "faker": "^4.1.0",
     "fullcalendar": "^3.9.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
@@ -27,6 +25,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.0.0-rc.1",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-e2e-nightwatch": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.1",
@@ -39,10 +38,13 @@
     "chai": "^4.1.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "faker": "^4.1.0",
     "material-design-icons-iconfont": "^4.0.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "sinon": "^7.2.3",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "^0.4.5",
     "vue-template-compiler": "^2.5.17"
   }
