--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "NODE_ENV=test nyc vue-cli-service test:unit"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -33,19 +33,32 @@
     "@vue/cli-plugin-unit-mocha": "^3.1.1",
     "@vue/cli-service": "^3.1.1",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-istanbul": "^5.1.0",
     "chai": "^4.1.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "faker": "^4.1.0",
     "material-design-icons-iconfont": "^4.0.2",
     "node-sass": "^4.9.0",
+    "nyc": "^13.2.0",
     "sass-loader": "^7.0.1",
     "sinon": "^7.2.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "^0.4.5",
-    "vue-template-compiler": "^2.6.0"
+    "vue-template-compiler": "^2.6.0",
+    "vue-test-utils": "^1.0.0-beta.11"
+  },
+  "nyc": {
+    "exclude": [
+      "dist"
+    ],
+    "reporter": [
+      "html",
+      "text",
+      "text-summary"
+    ]
   }
 }
