--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,9 +20,9 @@ run_yarn_install:
 run_unit_tests:
   stage: test
   variables:
-    - VUE_APP_APP_NAME: $TEST_VUE_APP_APP_NAME
-    - VUE_APP_API_URL: $TEST_VUE_APP_API_URL
-    - VUE_APP_AUTH_USERNAME: $TEST_VUE_APP_AUTH_USER_NAME
-    - VUE_APP_AUTH_PASSWORD: $TEST_VUE_APP_AUTH_PASSWORD
+    VUE_APP_APP_NAME: $TEST_VUE_APP_APP_NAME
+    VUE_APP_API_URL: $TEST_VUE_APP_API_URL
+    VUE_APP_AUTH_USERNAME: $TEST_VUE_APP_AUTH_USER_NAME
+    VUE_APP_AUTH_PASSWORD: $TEST_VUE_APP_AUTH_PASSWORD
   script:
     - yarn test:unit
