--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,15 +19,11 @@ run_yarn_install:
 
 run_unit_tests:
   stage: test
-  variables:
-    VUE_APP_APP_NAME: $TEST_VUE_APP_APP_NAME
-    VUE_APP_API_URL: $TEST_VUE_APP_API_URL
-    VUE_APP_AUTH_USERNAME: $TEST_VUE_APP_AUTH_USER_NAME
-    VUE_APP_AUTH_PASSWORD: $TEST_VUE_APP_AUTH_PASSWORD
   script:
-    - touch .env.test
+    - touch .env.test.local
     - echo VUE_APP_APP_NAME=$TEST_VUE_APP_APP_NAME >> .env
     - echo VUE_APP_API_URL=$TEST_VUE_APP_API_URL >> .env
     - echo VUE_APP_AUTH_USERNAME=$TEST_VUE_APP_AUTH_USER_NAME >> .env
     - echo VUE_APP_AUTH_PASSWORD=$TEST_VUE_APP_AUTH_PASSWORD >> .env
+    - cat .env
     - yarn test:unit
