--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,9 @@ build:
   before_script:
     - docker info
   script:
+    - touch .env.production.local
+    - echo VUE_APP_APP_NAME=$TEST_VUE_APP_APP_NAME >> .env.production.local
+    - echo VUE_APP_API_URL=$TEST_VUE_APP_API_URL >> .env.production.local
     - docker build . -t $CONTAINER_REGISTRY:latest
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
     - docker push $CONTAINER_REGISTRY:latest
