--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,12 +24,13 @@ run_yarn_install:
 
 run_unit_tests:
   stage: test
-  script:
+  before_script:
     - touch .env.test.local
     - echo VUE_APP_APP_NAME=$TEST_VUE_APP_APP_NAME >> .env.test.local
     - echo VUE_APP_API_URL=$TEST_VUE_APP_API_URL >> .env.test.local
     - echo VUE_APP_AUTH_USERNAME=$TEST_VUE_APP_AUTH_USERNAME >> .env.test.local
     - echo VUE_APP_AUTH_PASSWORD=$TEST_VUE_APP_AUTH_PASSWORD >> .env.test.local
+  script:
     - yarn test:unit
 
 build:
@@ -41,12 +42,12 @@ build:
   services:
     - docker:dind
   before_script:
-    - docker info
-  script:
     - touch .env.production.local
     - echo VUE_APP_APP_NAME=$PROD_VUE_APP_APP_NAME >> .env.production.local
     - echo VUE_APP_API_URL=$PROD_VUE_APP_API_URL >> .env.production.local
+  script:
     - docker build . -t $CONTAINER_REGISTRY:latest
+  after_script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
     - docker push $CONTAINER_REGISTRY:latest
 
