--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "currency.js": "^1.2.1",
     "fullcalendar": "^3.9.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
